# rating-overlay-api

./: .bandit.yaml  .black.toml  .editorconfig  .gitignore  .isort.cfg  .mypy.ini  .pre-commit-config.yaml  .prospector.yaml  Dockerfile  README.md  app.py  constants.py  docker-compose.yml  pyproject.toml  rating-overlay-api.compose.ci.yml  rating-overlay-api.compose.dev.yml  rating-overlay-api.compose.yml  zappa_settings.yml
.circleci/: config.yml
helpers/: api.py  asgi.py  date.py  json_encoder.py
logic/: fetch_data.py
models/: match.py  player.py
tests/: conftest.py  test_app.py
views/: match.py  player.py
zappa_hooks/: post.py
