[tool.poetry]
name = "rating-overlay-api"
version = "0.1.0"
description = ""
authors = ["Ziga Vucko <ziga.vucko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

boto3 = "^1.9"
zappa = "^0.52.0"
aiohttp = "^3.6"
flask = "^1.1"
flask-cors = "^3.0"

[tool.poetry.dev-dependencies]
pytest = "^4.3"
pytest-mock = "^1.10"
pytest-flask = "^0.14.0"
pytest-cov = "^2.6"
prospector = "^1.3"
black = "^20.8b1"
pre-commit = "^1.14"
bandit = "^1.5"
isort = "^4.3.21"
mypy = "^0.782.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
